[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "poker_domain"
version = "0.1.0"
description = "Poker Core Logic library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["poker_domain"]

[tool.setuptools.package-dir]
poker_domain = "."
