[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poker_domain"
version = "0.2.0"
description = "Poker Core Logic library"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.4,<1.0",
    "mypy>=1.8,<2.0",
]
test = [
    "pytest>=7.0,<9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/poker_domain"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
packages = ["poker_domain"]
mypy_path = "src"
